documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.VB


    Public Declare Function PC708_CardClose Lib "P71W32.DLL" Alias "_PC708_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardOpen Lib "P71W32.DLL" Alias "_PC708_CardOpen@16" (ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16) As UInt32
    Public Declare Sub PC708_CardReset Lib "P71W32.DLL" Alias "_PC708_CardReset@4" (ByVal handleval As UInt32)
    Public Declare Function PC708_CardStart Lib "P71W32.DLL" Alias "_PC708_CardStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardStop Lib "P71W32.DLL" Alias "_PC708_CardStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_IntInstall Lib "P71W32.DLL" Alias "_PC708_IntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_IntRd Lib "P71W32.DLL" Alias "_PC708_IntRd@12" (ByRef typevalval As UInt16, ByRef infoval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_IntStatus Lib "P71W32.DLL" Alias "_PC708_IntStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_IntUninstall Lib "P71W32.DLL" Alias "_PC708_IntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RcvConfig Lib "P71W32.DLL" Alias "_PC708_RcvConfig@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RcvConfigEx Lib "P71W32.DLL" Alias "_PC708_RcvConfigEx@12" (ByVal rtconfigval As UInt32, ByVal intfreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_RcvMonBlkRd Lib "P71W32.DLL" Alias "_PC708_RcvMonBlkRd@16" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_RcvMonBlkRdEx Lib "P71W32.DLL" Alias "_PC708_RcvMonBlkRdEx@20" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByVal maxblkcnt As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_RcvMonRd Lib "P71W32.DLL" Alias "_PC708_RcvMonRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_RcvMonRdEx Lib "P71W32.DLL" Alias "_PC708_RcvMonRdEx@12" (ByRef buf As UInt16, ByVal index As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_RcvMonStatus Lib "P71W32.DLL" Alias "_PC708_RcvMonStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_RcvRd Lib "P71W32.DLL" Alias "_PC708_RcvRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_XmtConfig Lib "P71W32.DLL" Alias "_PC708_XmtConfig@8" (ByVal framefreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtConfigEx Lib "P71W32.DLL" Alias "_PC708_XmtConfigEx@16" (ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_XmtConfigExx Lib "P71W32.DLL" Alias "_PC708_XmtConfigExx@20" (ByVal xmtconfigval As UInt32, ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_XmtRd Lib "P71W32.DLL" Alias "_PC708_XmtRd@12" (ByRef buf As UInt16, ByVal framenum As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_XmtStatus Lib "P71W32.DLL" Alias "_PC708_XmtStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_XmtWr Lib "P71W32.DLL" Alias "_PC708_XmtWr@12" (ByRef buf As UInt16, ByVal framenum As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_FieldGetAngle Lib "P71W32.DLL" Alias "_PC708_FieldGetAngle@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldGetAngleFl Lib "P71W32.DLL" Alias "_PC708_FieldGetAngleFl@4" (ByRef buf As UInt16) As Single
    Public Declare Function PC708_FieldGetControlAccept Lib "P71W32.DLL" Alias "_PC708_FieldGetControlAccept@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldGetData Lib "P71W32.DLL" Alias "_PC708_FieldGetData@8" (ByVal binnum As Int32, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldGetDataAccept Lib "P71W32.DLL" Alias "_PC708_FieldGetDataAccept@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldGetFaults Lib "P71W32.DLL" Alias "_PC708_FieldGetFaults@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldGetGain Lib "P71W32.DLL" Alias "_PC708_FieldGetGain@4" (ByRef buf As UInt16) As Int32
    Public Declare Function PC708_FieldGetLabel Lib "P71W32.DLL" Alias "_PC708_FieldGetLabel@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldGetMode Lib "P71W32.DLL" Alias "_PC708_FieldGetMode@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldGetRange Lib "P71W32.DLL" Alias "_PC708_FieldGetRange@4" (ByRef buf As UInt16) As Int32
    Public Declare Function PC708_FieldGetTilt Lib "P71W32.DLL" Alias "_PC708_FieldGetTilt@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldGetTiltFl Lib "P71W32.DLL" Alias "_PC708_FieldGetTiltFl@4" (ByRef buf As UInt16) As Single
    Public Declare Function PC708_FieldPutAngle Lib "P71W32.DLL" Alias "_PC708_FieldPutAngle@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldPutAngleFl Lib "P71W32.DLL" Alias "_PC708_FieldPutAngleFl@8" (ByVal angle As Single, ByRef buf As UInt16) As Single
    Public Declare Function PC708_FieldPutControlAccept Lib "P71W32.DLL" Alias "_PC708_FieldPutControlAccept@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldPutData Lib "P71W32.DLL" Alias "_PC708_FieldPutData@12" (ByVal value As UInt16, ByVal binnum As Int32, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldPutDataAccept Lib "P71W32.DLL" Alias "_PC708_FieldPutDataAccept@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldPutFaults Lib "P71W32.DLL" Alias "_PC708_FieldPutFaults@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldPutGain Lib "P71W32.DLL" Alias "_PC708_FieldPutGain@8" (ByVal gain As Int32, ByRef buf As UInt16) As Int32
    Public Declare Function PC708_FieldPutLabel Lib "P71W32.DLL" Alias "_PC708_FieldPutLabel@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldPutMode Lib "P71W32.DLL" Alias "_PC708_FieldPutMode@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldPutRange Lib "P71W32.DLL" Alias "_PC708_FieldPutRange@8" (ByVal range As Int32, ByRef buf As UInt16) As Int32
    Public Declare Function PC708_FieldPutTilt Lib "P71W32.DLL" Alias "_PC708_FieldPutTilt@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function PC708_FieldPutTiltFl Lib "P71W32.DLL" Alias "_PC708_FieldPutTiltFl@8" (ByVal tilt As Single, ByRef buf As UInt16) As Single
    Public Declare Function PC708_AddrDSP Lib "P71W32.DLL" Alias "_PC708_AddrDSP@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function PC708_AddrHost Lib "P71W32.DLL" Alias "_PC708_AddrHost@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function PC708_BCConfig Lib "P71W32.DLL" Alias "_PC708_BCConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCConfigEx Lib "P71W32.DLL" Alias "_PC708_BCConfigEx@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCConfigMsg Lib "P71W32.DLL" Alias "_PC708_BCConfigMsg@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_BCCreateMsg Lib "P71W32.DLL" Alias "_PC708_BCCreateMsg@20" (ByVal configval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_BCSchedAgain Lib "P71W32.DLL" Alias "_PC708_BCSchedAgain@8" (ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedBranch Lib "P71W32.DLL" Alias "_PC708_BCSchedBranch@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedBranchDin0 Lib "P71W32.DLL" Alias "_PC708_BCSchedBranchDin0@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedBranchDin1 Lib "P71W32.DLL" Alias "_PC708_BCSchedBranchDin1@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedBranchEx Lib "P71W32.DLL" Alias "_PC708_BCSchedBranchEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedBuild Lib "P71W32.DLL" Alias "_PC708_BCSchedBuild@16" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedCall Lib "P71W32.DLL" Alias "_PC708_BCSchedCall@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedCallCond Lib "P71W32.DLL" Alias "_PC708_BCSchedCallCond@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedCallCondEx Lib "P71W32.DLL" Alias "_PC708_BCSchedCallCondEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedEntry Lib "P71W32.DLL" Alias "_PC708_BCSchedEntry@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedFrame Lib "P71W32.DLL" Alias "_PC708_BCSchedFrame@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedFrameEnd Lib "P71W32.DLL" Alias "_PC708_BCSchedFrameEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedFrameStart Lib "P71W32.DLL" Alias "_PC708_BCSchedFrameStart@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedGap Lib "P71W32.DLL" Alias "_PC708_BCSchedGap@8" (ByVal gapval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedGoto Lib "P71W32.DLL" Alias "_PC708_BCSchedGoto@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedHalt Lib "P71W32.DLL" Alias "_PC708_BCSchedHalt@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedInt Lib "P71W32.DLL" Alias "_PC708_BCSchedInt@8" (ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedIntCond Lib "P71W32.DLL" Alias "_PC708_BCSchedIntCond@12" (ByVal condition As UInt16, ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedIntCondEx Lib "P71W32.DLL" Alias "_PC708_BCSchedIntCondEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedMsg Lib "P71W32.DLL" Alias "_PC708_BCSchedMsg@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedNop Lib "P71W32.DLL" Alias "_PC708_BCSchedNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedPause Lib "P71W32.DLL" Alias "_PC708_BCSchedPause@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedPulse Lib "P71W32.DLL" Alias "_PC708_BCSchedPulse@4" (ByVal handleval As UInt32) As Int32
